Version 2.13 --> 2.14

* Upgraded build system to work with automake 1.5 and autoconf 2.53.

Version 2.12 --> 2.13

* Support for shell functions.  This version also fixes the
  problem that the alias for `which' wasn't inherited by subshells.
  You need to change the alias by a shell function! (The rpm does
  this automatically).
* Fixes for the .spec file (merged changes from RedHat 7.1)
  Now installs the which.info file as well.

Version 2.11 --> 2.12

* Minor man page fix (no reason to upgrade at all thus)

Version 2.10 --> 2.11

* Added a texinfo file (no reason to upgrade at all thus)
  `info' is the prefered format for documenting GNU tools.

Version 2.9 --> 2.10

* Buildsystem fixes (no reason to upgrade at all thus):
  Used the correct order of calling the automake/conf utils,
  fixed my E-mail address and added a Source: line to the rpm spec.

Version 2.8 --> 2.9

* Fixed compile problem in Solaris 5.6 using cc
* Added a `--help' option
* RPMs now add a /etc/profile.d script, automatically setting a useful alias

Version 2.7 --> 2.8

* aclocal.m4 was missing from the tar, resulting in
  a build failure if autoconf isn't installed.

Version 2.6 --> 2.7

* Support for aliases
* Configure/compile fix in the `tilde' directory.

Version 2.5 --> 2.6

* Doesn't depend on libreadline.a anymore.

Version 2.4 --> 2.5

* Fixed which-2.spec
* RPMs are now available from http://www.xs4all.nl/~carlo17/which